--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^1.0.12",
+    "aws-amplify": "^4.1.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
