add storage for expt.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -98,6 +98,10 @@
     "URL": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
+    },
+    "videos": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
     }
   }
 }
