--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -7,7 +7,7 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": "dist",
-      "BuildCommand": "npm run-script build",
+      "BuildCommand": "npm run-script generate",
       "StartCommand": "npm run-script start"
     }
   },
